Fix: correction des z-index pour la side nav et le header

--- a/src/assets/styles/layouts/_overlay.scss
+++ b/src/assets/styles/layouts/_overlay.scss
@@ -3,8 +3,7 @@
     height: 100vh;
     width: 100vw;
     top: 0;
-    left: 0;
-    background: hsla(var(--link-color-primary-h), var(--link-color-primary-s), var(--link-color-primary-l), 0.5);
-    backdrop-filter: blur(5px);
+    right: 0;
+    backdrop-filter: blur(1rem);
     z-index: 9;
 }
